Implemented separate classes for every hero